# coc-_project

./: .gitignore  README.md
backend/: pyproject.toml
backend/app/: main.py
backend/app/api/v1/: generation.py  modules.py  router.py  sessions.py  status.py
backend/app/core/: config.py
backend/app/schemas/: generation.py  modules.py  sessions.py
backend/app/services/: dependencies.py  generation_service.py  module_service.py  session_service.py
