[tool.poetry]
name = "coc-keeper-copilot-backend"
version = "0.1.0"
description = "FastAPI backend for the Call of Cthulhu keeper assistant"
authors = ["Your Team <team@example.com>"]
readme = "../README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
pydantic = "^2.6.4"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
httpx = "^0.27.0"

[build-system]
requires = ["poetry-core>=1.5.0"]
build-backend = "poetry.core.masonry.api"
